# reAct-Agents

./: .gitignore  README.md  chat_api.py  env.example  index.html  main.py  pyproject.toml  requirements.txt
react_agent/: __init__.py  agent.py  llm.py  prompts.py  run_schema.py  tools.py
test/: a.json  test.py
test/results/: progress_run_20260710_093210.jsonl  progress_test1.jsonl  progress_test2.jsonl  progress_test3.jsonl  progress_test_1.jsonl  results_run_20260710_093210.json  results_run_20260710_093210_schema.json  results_test1_schema.json  results_test2.json  results_test2_schema.json  results_test3.json  results_test3_schema.json  results_test_1.json  results_test_1_schema.json
